--- a/style/general.css
+++ b/style/general.css
@@ -130,7 +130,7 @@
 
     .textOverlay{
         margin-top: 300px;
-        font-family: "Roboto Bold";
+        font-family: "Roboto Light";
         font-size: 90px;
         text-align: center;
         position: absolute;
