--- a/style/general.css
+++ b/style/general.css
@@ -44,8 +44,8 @@
     #outline{
         padding-bottom: 16px;
         -webkit-text-stroke-width: 2px;
-        -webkit-text-stroke-color:  #3D7E7E;
-        color: #AEE0E0;
+        -webkit-text-stroke-color:  #FDD946;
+        color: #0D38D3;
     }
 
     body{
