--- a/style/general.css
+++ b/style/general.css
@@ -45,7 +45,7 @@
         padding-bottom: 16px;
         -webkit-text-stroke-width: 2px;
         -webkit-text-stroke-color:  #FDD946;
-        color: #0D38D3;
+        color: #003046;
     }
 
     body{
