--- a/style/general.css
+++ b/style/general.css
@@ -45,7 +45,7 @@
         padding-bottom: 16px;
         -webkit-text-stroke-width: 2px;
         -webkit-text-stroke-color:  #FDD946;
-        color: #1A1918;
+        color: #0C6B68;
     }
 
     body{
