--- a/style/general.css
+++ b/style/general.css
@@ -123,6 +123,9 @@
 
     /*Text Overlay*/
     .container{
+        min-height: 100vh;
+        width: 100%;
+        display: flex;
         position: relative;
         text-align: center;
         color: #FDD946;
@@ -134,7 +137,7 @@
         font-size: 90px;
         font-weight: bold;
         text-align: center;
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
