--- a/style/general.css
+++ b/style/general.css
@@ -132,7 +132,7 @@
 
     .textOverlay{
         margin-top: 300px;
-        font-family: "Roboto Light";
+        font-family: Raleway, sans-serif;
         font-size: 90px;
         font-weight: bold;
         text-align: center;
