--- a/style/general.css
+++ b/style/general.css
@@ -36,6 +36,7 @@
     p {
         margin: 10px 50px 10px 50px;
         font-family: Raleway, sans-serif;
+        line-height: 120%;
         font-style: normal;
         font-weight: 600;
         font-size: 16px;
