fixed index page

--- a/style/general.css
+++ b/style/general.css
@@ -44,7 +44,8 @@
 
     #outline{
         padding-bottom: 16px;
-        /*-webkit-text-stroke-width: 2px;*/
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: #43D6B9;
         color: #0C6B68;
     }
 
@@ -123,9 +124,6 @@
 
     /*Text Overlay*/
     .container{
-
-        width: 100%;
-
         position: relative;
         text-align: center;
         color: #FDD946;
@@ -137,7 +135,7 @@
         font-size: 90px;
         font-weight: bold;
         text-align: center;
-        position: relative;
+        position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
