--- a/style/general.css
+++ b/style/general.css
@@ -135,7 +135,7 @@
         font-size: 90px;
         font-weight: bold;
         text-align: center;
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
