--- a/style/general.css
+++ b/style/general.css
@@ -139,6 +139,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        position: relative;
     }
 
 /*STYLE MEDIA*/
