--- a/style/general.css
+++ b/style/general.css
@@ -9,7 +9,7 @@
         font-weight: 600;
         padding-bottom: 16px;
     }
-    
+
     /* Sub-heaading*/
     h2{
         margin: 10px 50px 10px 50px;
@@ -36,7 +36,6 @@
     p {
         margin: 10px 50px 10px 50px;
         font-family: Raleway, sans-serif;
-        line-height: 120%;
         font-style: normal;
         font-weight: 600;
         font-size: 16px;
@@ -97,7 +96,7 @@
         height: 40px;
     }
 
-/*STYLE IMAGE OVERLAY/COLLAGE*/
+/*STYLE IMAGE OVERLAY/COLLAGE FOR INDEX PAGE*/
 
     /*Style Images*/
     .imageLeft {
@@ -124,13 +123,13 @@
 
     /*Text Overlay*/
     .container{
-        position: absolute;
+        position: relative;
         text-align: center;
         color: #FDD946;
     }
 
     .textOverlay{
-        margin-top: 300px;
+        margin-top: 100px;
         font-family: Raleway, sans-serif;
         font-size: 90px;
         font-weight: bold;
@@ -141,30 +140,32 @@
         transform: translate(-50%, -50%);
     }
 
-/*STYLE MEDIA*/
+/*STYLE MEDIA FOR INDEX PAGE*/
     /* Create three unequal columns that floats next to each other */
     .column {
         float: left;
+        width: 47%;
+        margin-bottom: 10px;
         padding: 10px;
     }
-    
+
     /* Left and right column */
     .column.side {
         width: 20%;
     }
-    
+
     /* Middle column */
     .column.middle {
         width: 55%;
     }
-    
+
     /* Clear floats after the columns */
     .row:after {
         content: "";
         display: table;
         clear: both;
     }
-    
+
     /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
     @media screen and (max-width: 600px) {
         .column.side, .column.middle {
@@ -172,4 +173,32 @@
         }
     }
 
+/* STYLE MEDIA FOR ABOUT US PAGE */
+    /* each individual box within the columns*/
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin: 8px;
+    }
+    .container2 {
+        padding: 0 16px;
+    }
+
+    .container2::after{
+        content: "";
+        clear: both;
+        display: table;
+    }
+
+    .about-section {
+        padding: 50px;
+        text-align: center;
+        background-color: #474e5d;
+        color: white;
+    }
+    @media screen and (max-width: 650px) {
+        .column {
+            width: 100%;
+            display: block;
+        }
+    }
 
