--- a/style/aboutUs.css
+++ b/style/aboutUs.css
@@ -37,6 +37,7 @@ h3 {
 
 /*Paragraph text*/
 p {
+    color: #0C6B68;
     margin: 10px 50px 10px 50px;
     font-family: Raleway, sans-serif;
     font-style: normal;
